Homework for week 3. Account service added

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <modules>
         <module>authn</module>
         <module>task-tracker</module>
+        <module>account</module>
     </modules>
 
     <build>
