Homework for week 3. Analytics service added

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>authn</module>
         <module>task-tracker</module>
         <module>account</module>
+        <module>analytics</module>
     </modules>
 
     <build>
