--- a/analytics/src/main/resources/application.yml
+++ b/analytics/src/main/resources/application.yml
@@ -23,7 +23,11 @@ spring:
     consumer:
       group-id: ru.toughdev.ates.analytics.consumer
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: io.confluent.kafka.serializers.KafkaAvroDeserializer
+    properties:
+      "[schema.registry.url]": http://localhost:8081
+      "[specific.avro.reader]": true
+      "[auto.register.schemas]": false
 
 jwt:
   token:
