--- a/authn/src/main/resources/application.yml
+++ b/authn/src/main/resources/application.yml
@@ -23,10 +23,15 @@ spring:
     consumer:
       group-id: ru.toughdev.ates.authn.consumer
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: io.confluent.kafka.serializers.KafkaAvroDeserializer
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
-      value-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: io.confluent.kafka.serializers.KafkaAvroSerializer
+    properties:
+      "[schema.registry.url]": http://localhost:8081
+      "[specific.avro.reader]": true
+      "[auto.register.schemas]": false
+
 jwt:
   token:
     secret: ates-app
